# recipe-rs

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  flake.nix  justfile  release-please-config.json
.github/: dependabot.yml
.github/workflows/: coverage.yml  nix.yml  release.yml  rust.yml  update-nix.yml
.helix/: config.toml
src/: lib.rs  main.rs  numbers.rs  recipe.rs
src/formater/: mod.rs
src/schema_org/: mod.rs
src/scrapers/: allrecipes.rs  json_ld.rs  mod.rs
tests/: integration_tests.rs
