[package]
name = "recipe-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
fraction = { version = "0.15.3", features = ["with-unicode"] }
reqwest = { version = "0.12.5", default-features = false, features = ["blocking", "native-tls"] }
scraper = "0.19.0"
