[package]
name = "recipe-rs"
version = "0.1.2"
edition = "2021"
description = "A recipe scraper written in rust with wasm"
repository = "https://github.com/tmayoff/recipe-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
fraction = { version = "0.15.3", features = ["with-unicode"] }
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.69"
regex = "1.10.5"
scraper = "0.19.0"
url = "2.5.2"
wasm-bindgen = "0.2.92"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "2.9.7"
