[package]
name = "recipe-rs"
version = "0.1.6"
edition = "2021"
description = "A recipe scraper written in rust with wasm"
repository = "https://github.com/tmayoff/recipe-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fraction = { version = "0.15.3", features = ["with-unicode"] }
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.76"
regex = "1.11.1"
scraper = "0.22.0"
url = "2.5.4"
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.92"
serde_json = "1.0.134"
ingredient = "0.3.0"
thiserror = "2.0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0.95"
ureq = "2.12.1"
clap = { version = "4.5.23", features = ["derive"] }
